bmat/static/styles.css
/*
 *  Basic Elements
 */
body {
    margin:0px;
    color:#222222;
    padding-bottom:20px;
}

form {
    display:inline;
}

nav {
    display:-webkit-flex;
    display:-ms-flex;
    display:flex;
    justify-content:center;
    border-bottom:1px solid #cccccc;
    background:#fafafa;
    flex-wrap:wrap;
    -ms-flex-wrap:wrap;
    -webkit-flex-wrap:wrap;
}

main {
    display:block;
}

footer {
    font-size:80%;
    padding:5px;
    margin-top:5px;
    margin-bottom:5px;
}

footer {
    display:block;
}


/*
 * Links
 */
a {
    text-decoration:none;
    color:#333333;
}

.underlink a {
    text-decoration:underline;
}

a:visited {
    color:#888888;
}

nav a {
    display:block;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 5px;
    margin-bottom: -1px;
    padding:5px;
    font-size:120%;
    color:#999999 !important;
    border-bottom:2px solid transparent;
}

nav a.active.active {
    border-bottom:3px solid #9999cc;
    color:#9999cc !important;
}

nav a:hover {
    border-bottom:2px solid #E9C229;
    color:#E9C229 !important;
}

.tag a, .tagBlock a {
    color:inherit;
}


/*
 * Errors
 */
#error {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
    padding:5px;
    background-color:#994444;
    border-bottom:1px solid #330000;
    color:#eeaaaa;
    position:fixed;
    width:100%;
}

.errorButtons {
    margin-left:auto;
    margin-right:15px;
}

.errorText {
    padding:2px;
}

/*
 * Undo
 */
#undo {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
    padding:5px;
    background-color:#dddd77;
    border-bottom:1px solid #bbbb55;
    position:fixed;
    width:100%;
}

#undo form {
    margin-right:5px;
}

.undoButtons {
    margin-right:15px;
}

.undoText {
    -ms-flex: 1 1 auto;
    -webkit-flex: 1 1 auto;
    flex: 1 1 auto;
}

/* 
 * Adverts
 */
.adsbygoogle {
    text-align:center;
    padding:5px;
}

/*
 * Boxes
 */
.box {
    margin-left:10px;
    margin-right:10px;
    line-height:150%;
}

.flex {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
}

/*
 *  Multitag box thing
 */
.multiTagBox.multiTagBox {
    position:fixed;
    right:40px;
    top:5px;
    margin:0px;
    border-radius:5px;
}

/*
 * Top part of a block
 */
.head {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
}

.head > div {
    padding:2px;
    padding-top:3px;
}

.head .count {
    display:inline-block;
    min-width:32px;
    text-align:center;
    padding:2px;
    padding-top:3px;
}

.title, .url {
    -ms-flex: 1 1 auto;
    -webkit-flex: 1 1 auto;
    flex:1 1 auto;
    padding-right:30px !important;
}

.edit {
    /* Editing name box on titles page */
    display:none;
    padding:0px;
}

.edit input {
    margin:0px;
    width:100%;
}

input[type=text], input[type=password] {
    background-color:inherit;
    font-size:100%;
    font-style:inherit;
    padding-left:3px;
    padding-right:3px;
}

.edit .done {
    margin-top:0px;
}

.head .tags {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
}

.head form {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
    align-items:center;
}

.tagEntry {
    width:150px;
}


/* 
 * Contents of a box, hidden until displayed with a button
 */
.body {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
    visibility:none;
}

.body .right {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
    margin-left:auto;
}

.url, .added {
    color:#999999;
    font-style:italic;
}

.added {
    margin-right:auto;
}

/*
 * Misc
 */
.hidden {
    display:none;
}

.currentPage {
    text-decoration:underline;
}

.box.title {
    font-size:120%;
    margin-top:20px;
}

#add-bookmark input[type=submit] {
    width:80px;
}

#add-bookmark {
    flex: 1;
}

#search-results {
    margin-top:100px; /* For autocomplete */
}

.multiTagCheck {
    width:0px;
    margin:0px;
    height:16px;
    margin-top:6px;
    display:none;
}

#search-results .multiTagCheck {
    display:initial; /* Always display the checkbox in search */
}

.multiTagCheckVisible {
    width:16px;
    margin-left:5px;
    margin-right:5px;
}

.multiTagBox {
    display:none;
}


/*
 * Tags
 */
.tag {
    display:-ms-flex;
    display:-webkit-flex;
    display:flex;
    align-items:center;
    padding:2px;
    padding-left:4px;
    padding-right:4px;
    border: 1px solid;
    margin-right:4px;
    border-radius:5px;
    overflow:hidden;
}

.tags.tags.tags {
    padding:0px;
}


/* 
 * Buttons
 */
.button {
    width:16px;
    height:16px;
    display:inline-block;
    margin-top:4px;
    cursor:pointer;
    overflow:hidden;
    margin-left:3px;
    margin-right:3px;
}

.buttons.buttons.buttons {
    padding:0px;
    margin-top:3px;
    height:16px;
}

.delete.button {
    background-image:url('/static/icons/delete.png');
}

.expand.button {
    background-image:url('/static/icons/editExpand.png');
}

.editTitle.button {
    background-image:url('/static/icons/rename.png');
}

.addTag.button {
    background-image:url('/static/icons/addTag.png');
}

.rightSpace {
    margin-right:20px;
}

.multiTag.button {
    background-image:url('/static/icons/multiTag.png');
    margin-right:15px;
}

.multiTagAll.button {
    background-image:url('/static/icons/multiTagAll.png');
    margin-right:10px;
}

.untag.button {
    background-image:url('/static/icons/removeTag.png');
}



.inlineUntag.button {
    background-image:url('/static/icons/removeTag.png');
    margin-top:0px;
    display:none;
    width:0px;
}

.rename.button {
    margin-top:0px;
    background-image:url('/static/icons/save.png');
}


/*
 * Buttons on dark backgrounds
 */
.black .delete.button, .darkblue .delete.button, .darkgreen .delete.button, .darkred .delete.button {
    background-image:url('/static/icons/deleteLight.png');
}

#error .close.button {
    background-image:url('/static/icons/close.png');
}

#undo .close.button {
    background-image:url('/static/icons/undoClose.png');
}

.black .expand.button, .darkblue .expand.button, .darkgreen .expand.button, .darkred .expand.button {
    background-image:url('/static/icons/editExpandLight.png');
}

.black .editTitle.button, .darkblue .editTitle.button, .darkgreen .editTitle.button, .darkred .editTitle.button {
    background-image:url('/static/icons/renameLight.png');
}

.black .addTag.button, .darkblue .addTag.button, .darkgreen .addTag.button, .darkred .addTag.button {
    background-image:url('/static/icons/addTagLight.png');
}

.black .untag.button, .darkblue .untag.button, .darkgreen .untag.button, .darkred .untag.button {
    background-image:url('/static/icons/removeTagLight.png');
}

.black > form .inlineUntag.button, .darkblue > form .inlineUntag.button, .darkgreen > form .inlineUntag.button,
.darkred > form .inlineUntag.button {
    background-image:url('/static/icons/removeTagLight.png');
}

.black .rename.button, .darkblue .rename.button, .darkgreen .rename.button, .darkred .rename.button {
    background-image:url('/static/icons/saveLight.png');
}

/* Mobile support */
@media (max-width: 550px) {
    .nomobile {
        display:none !important;
    }
    
    .rightIfMobile {
        display:-ms-flex;
        display:-webkit-flex;
        display:flex;
        margin-left:auto;
    }
}

@media (min-width: 551px) {
    .mobile {
        display:none !important;
    }
    
    .rightIfNotMobile {
        display:-ms-flex;
        display:-webkit-flex;
        display:flex;
        margin-left:auto;
    }
}

@media (max-width: 375px) {
    .tagEntry {
        width:100px;
    }
}

